--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title:  My Coding Journey
+title:  Patrick's Coding Journey
 email: sigart.patrick@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  This little blog showcases snippets from my coding journey working on my first project.
+  This little blog showcases snippets from my coding journey, overcoming struggles and learning new things.
 baseurl: "/nutrix-blog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
